--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ gunicorn = "20.1.0"
 uvicorn = "0.13.4"
 aiofiles = "0.7.0"
 Jinja2 = "3.0.1"
+uvloop = "^0.15.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
