--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# poetry export -f requirements.txt -o requirements.txt --without-hashes
 aiofiles==0.7.0; python_version >= "3.6" and python_version < "4.0"
 click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 fastapi==0.65.1; python_version >= "3.6"
@@ -10,3 +9,4 @@ pydantic==1.8.2; python_full_version >= "3.6.1" and python_version >= "3.6"
 starlette==0.14.2; python_version >= "3.6"
 typing-extensions==3.10.0.0; python_full_version >= "3.6.1" and python_version >= "3.6"
 uvicorn==0.13.4
+uvloop==0.15.2; python_version >= "3.7"
