--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "0.13.4"
 aiofiles = "0.7.0"
 Jinja2 = "3.0.1"
 uvloop = "^0.15.2"
+httptools = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
