--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or pytho
 fastapi==0.65.1; python_version >= "3.6"
 gunicorn==20.1.0; python_version >= "3.5"
 h11==0.12.0; python_version >= "3.6"
+httptools==0.2.0
 jinja2==3.0.1; python_version >= "3.6"
 markupsafe==2.0.1; python_version >= "3.6"
 pydantic==1.8.2; python_full_version >= "3.6.1" and python_version >= "3.6"
